--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,22 @@
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
+        <ul>
+        <img class="img-circle img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt="" />
+         <!-- (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()" -->
+        <span dropdown>
+          <a href dropdownToggle (click)="false">{{userName}}</a>
+          <ul *dropdownMenu class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
+            </li>
+            <li>
+              <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
+            </li>
+          </ul>
+        </span>
+</ul>
+        
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
@@ -50,6 +66,11 @@
   <!--RouterOutlet - 路由插座,显示路由器生成的视图。在展示父路由的位置中的某个地方展示子路由对应的地方。-->
   <router-outlet></router-outlet>
 </div>
+
+<!-- 登陆窗口弹出层 -->
+<!-- 此变量须与组件内@ViewChild的值相同 -->
+<app-loginmodel #loginModal></app-loginmodel>
+
 <!--页脚开始-->
 <div class="footer ">
   <div class="container">
