--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,56 @@
 <!--页头开始-->
-<div id="header" class="page-header" role="navigation" >
+<div id="header" class="page-header" role="navigation">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+          aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="javascript:void(0)"><img alt="Brand" src="../images/cpa.png"></a>
+        <a class="navbar-brand" href="javascript:void(0)">
+          <img alt="Brand" src="../images/cpa.png">
+        </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" >
+      <div class="collapse navbar-collapse">
         <!--这里使用[routerLink]将超链接和路由建立联接-->
         <ul class="nav navbar-nav">
           <!--这里使用routerLinkActive显示正处于哪个菜单的选中样式-->
-          <li routerLinkActive="active"><a [routerLink]="['/home']" href="javascript:void(0)">首页</a></li>
+          <li routerLinkActive="active">
+            <a [routerLink]="['/home']" href="javascript:void(0)">首页</a>
+          </li>
           <li class="dropdown">
-            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-               aria-expanded="false" >在线练习 <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel" >
-              <li routerLinkActive="active"><a [routerLink]="['/unitexam','basicAccount']" href="javascript:void(0)">会计基础</a></li>
+            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">在线练习
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <li routerLinkActive="active">
+                <a [routerLink]="['/unitexam','basicAccount']" href="javascript:void(0)">会计基础</a>
+              </li>
               <li class="divider"></li>
-              <li routerLinkActive="active"><a [routerLink]="['/unitexam','cpuAccount']" href="javascript:void(0)">会计电算化</a></li>
+              <li routerLinkActive="active">
+                <a [routerLink]="['/unitexam','cpuAccount']" href="javascript:void(0)">会计电算化</a>
+              </li>
               <li class="divider"></li>
-              <li routerLinkActive="active"><a [routerLink]="['/unitexam','statuteEthics']" href="javascript:void(0)">财经法规与职业道德</a></li>
+              <li routerLinkActive="active">
+                <a [routerLink]="['/unitexam','statuteEthics']" href="javascript:void(0)">财经法规与职业道德</a>
+              </li>
             </ul>
           </li>
-          <li routerLinkActive="active"><a href="javascript:void(0)">模拟测验</a></li>
-          <li routerLinkActive="active"><a [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a></li>
-          <li routerLinkActive="active"><a [routerLink]="['/manager']" href="javascript:void(0)">管理中心</a></li>
+          <li routerLinkActive="active">
+            <a href="javascript:void(0)">模拟测验</a>
+          </li>
+          <li routerLinkActive="active">
+            <a [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
+          </li>
+          <li routerLinkActive="active">
+            <a [routerLink]="['/manager']" href="javascript:void(0)">管理中心</a>
+          </li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
@@ -40,26 +58,39 @@
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
-        <ul>
-        <img class="img-circle img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt="" />
-         <!-- (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()" -->
-        <span dropdown>
-          <a href dropdownToggle (click)="false">{{userName}}</a>
-          <ul *dropdownMenu class="dropdown-menu">
-            <li>
-              <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
-            </li>
-            <li>
-              <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
-            </li>
-          </ul>
-        </span>
-</ul>
-        
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        <!-- 顶部导航栏右侧 -->
+        <ul class="nav navbar-nav navbar-right">
+          <a class="navbar-left" href="javascript:void(0)" [routerLink]="['/usercenter']">
+            <img #circleHeadImg class="img-circle  img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt="" />
+          </a>
+          <!-- (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()" -->
+          <span dropdown class="">
+            <a class="navbar-text" href dropdownToggle (click)="false">{{userName}}<span class="caret"></span></a>
+              
+            <ul *dropdownMenu class="dropdown-menu">
+              <li [ngClass]="{'disabled':hasLogin}">
+                <a  class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
+              </li>
+              <li [ngClass]="{'disabled':!hasLogin}">
+                <a class="dropdown-item" [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
+              </li>
+              <li class="divider dropdown-divider"></li>
+              <li [ngClass]="{'disabled':!hasLogin}">
+                <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
+              </li>
+            </ul>
+          </span>
+          <!-- 导航栏最右侧占位 -->
+          <p class="navbar-text ">&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        </ul>
+
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
   </nav>
-</div> <!--页头结束-->
+</div>
+<!--页头结束-->
 
 <!-- 主体内容区域 -->
 <div class="container container-fluid">
@@ -69,7 +100,7 @@
 
 <!-- 登陆窗口弹出层 -->
 <!-- 此变量须与组件内@ViewChild的值相同 -->
-<app-loginmodel #loginModal></app-loginmodel>
+<app-loginmodel  (childResult)="hitResult($event)" #loginModal></app-loginmodel>
 
 <!--页脚开始-->
 <div class="footer ">
@@ -119,6 +150,5 @@
       </ul>
     </div>
   </div>
-</div><!--页脚结束-->
-
-
+</div>
+<!--页脚结束-->
