--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -1,3 +1,4 @@
+
 <!--modal-->
 <div *ngIf="isScoreModalShown" [config]="{ show: true }" (onHidden)="initHidden()" bsModal #scoreModal="bs-modal" class="modal fade"
   tabindex="-1" role="dialog" aria-hidden="true">
@@ -22,6 +23,9 @@
 <!-- 登陆窗口弹出层 -->
 <!-- 此变量须与组件内@ViewChild的值相同 -->
 <app-loginmodel #loginModal></app-loginmodel>
+
+<!-- 进度条组件 -->
+<app-progress #progress *ngIf="progressStatus" ></app-progress>
 
 <!--试题列表-->
 <div class="row" [@flyIn]="'active'">
