--- a/src/app/usercenter/usercenter.component.html
+++ b/src/app/usercenter/usercenter.component.html
@@ -75,7 +75,7 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title pull-left">Large modal</h4>
+        <h4 class="modal-title pull-left">编辑头像</h4>
         <button type="button" class="close pull-right" (click)="headModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -102,10 +102,14 @@
               <input id="taglocation" name="taglocation" value type="hidden" />
               <input type="text" name="tags" id="tags" value type="hidden" />
             </section>
-
           </div>
         </section>
-        <button type="button" (click)="uploadFile()" class="btn btn-default">上传头像</button>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" (click)="headModal.hide()" class="btn btn-default">关闭</button>
+
+        <button type="button" (click)="uploadFile()" class="btn btn-primary">上传头像</button>
       </div>
     </div>
   </div>
