引入ngrx管理状态

--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -41,7 +41,7 @@
             <div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
               <div>
                 <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/addExam']">新增试题</a>
-                <a href="javascript:void(0)" class="list-group-item">pie Chart</a>
+                <a href="javascript:void(0)" class="list-group-item" [routerLink]="['/manager/updExam']">编辑试题</a>
                 <a href="javascript:void(0)" class="list-group-item">google Chart</a>
               </div>
             </div>
