引入ngRx管理登陆状态已完成

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,11 +65,13 @@
           </a>
           <!-- (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()" -->
           <span dropdown class="">
-            <a class="navbar-text" href dropdownToggle (click)="false">{{userName}}<span class="caret"></span></a>
-              
+            <a class="navbar-text" href dropdownToggle (click)="false">{{userName}}
+              <span class="caret"></span>
+            </a>
+
             <ul *dropdownMenu class="dropdown-menu">
               <li [ngClass]="{'disabled':hasLogin}">
-                <a  class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
+                <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
               </li>
               <li [ngClass]="{'disabled':!hasLogin}">
                 <a class="dropdown-item" [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
@@ -100,7 +102,13 @@
 
 <!-- 登陆窗口弹出层 -->
 <!-- 此变量须与组件内@ViewChild的值相同 -->
-<app-loginmodel  (childResult)="hitResult($event)" #loginModal></app-loginmodel>
+<!-- <app-loginmodel  (childResult)="hitResult($event)" #loginModal></app-loginmodel> -->
+<!-- 对于登陆状态而言(当前项目登陆窗口为单独组件),之前登陆状态的改变(即上方导航显示当前登陆人的信息),是通过父子组件 间的通信完成的,
+  但是一个项目不可能只有一个地方要用到登陆,按钮A,B,C，点哪一个都需要进行登陆,而多个这些个需要登陆 的地方可能涉及到多个组件,
+  那么组件间的通信就会变得复杂而且冗余,所以引入ngRx状态管理来实现此功能,可以看出下面的
+代码比上面的代码少了组件间的通信方法 -->
+<app-loginmodel #loginModal></app-loginmodel>
+
 
 <!--页脚开始-->
 <div class="footer ">
