--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-          aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1"
+                aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -25,7 +26,8 @@
             <a [routerLink]="['/home']" href="javascript:void(0)">首页</a>
           </li>
           <li class="dropdown">
-            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">在线练习
+            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
+               aria-haspopup="true" aria-expanded="false">在线练习
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -61,23 +63,24 @@
         <!-- 顶部导航栏右侧 -->
         <ul class="nav navbar-nav navbar-right">
           <a class="navbar-left" href="javascript:void(0)" [routerLink]="['/usercenter']">
-            <img #circleHeadImg class="img-circle  img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt="" />
+            <img #circleHeadImg class="img-circle  img-responsive" src="http://kanyun123.3vcm.net/circular.png" alt=""/>
           </a>
-          <!-- (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()" -->
-          <span dropdown class="">
+
+
+          <span dropdown (onShown)="onShown()" (onHidden)="onHidden()" (isOpenChange)="isOpenChange()">
             <a class="navbar-text" href dropdownToggle (click)="false">{{userName}}
               <span class="caret"></span>
             </a>
 
             <ul *dropdownMenu class="dropdown-menu">
-              <li [ngClass]="{'disabled':hasLogin}">
+              <li *ngIf="!hasLogin">
                 <a class="dropdown-item" (click)="login()" href="javascript:void(0)">登陆</a>
               </li>
-              <li [ngClass]="{'disabled':!hasLogin}">
+              <li *ngIf="hasLogin">
                 <a class="dropdown-item" [routerLink]="['/usercenter']" href="javascript:void(0)">个人中心</a>
               </li>
-              <li class="divider dropdown-divider"></li>
-              <li [ngClass]="{'disabled':!hasLogin}">
+              <li class="divider dropdown-divider" *ngIf="hasLogin"></li>
+              <li *ngIf="hasLogin">
                 <a class="dropdown-item" (click)="logout()" href="javascript:void(0)">注销</a>
               </li>
             </ul>
