--- a/src/app/manager/user/upd-user/upd-user.component.html
+++ b/src/app/manager/user/upd-user/upd-user.component.html
@@ -7,12 +7,14 @@
   <div class="form-group">
     <label for="">注册时间</label>
     <input type="text" class="form-control" placeholder="注册时间" [minDate]="registerMinDate"
-           [maxDate]="registerMaxDate" bsDaterangepicker [(ngModel)]="registerDaterangepickerModel"/>
+           [maxDate]="registerMaxDate" bsDaterangepicker [(ngModel)]="registerDaterangepickerModel"
+           name="registerDaterangepickerModel"/>
   </div>
   <div class="form-group">
     <label for="">最后一次登录时间</label>
     <input type="text" class="form-control" placeholder="注册时间" [minDate]="lastLoginMinDate"
-           [maxDate]="lastLoginMaxDate" bsDaterangepicker [(ngModel)]="lastLoginDaterangepickerModel"/>
+           [maxDate]="lastLoginMaxDate" bsDaterangepicker [(ngModel)]="lastLoginDaterangepickerModel"
+           name="lastLoginDaterangepickerModel"/>
   </div>
   <button type="submit" class="btn btn-default">搜索</button>
 </form>
