--- a/src/app/manager/user/upd-user/upd-user.component.html
+++ b/src/app/manager/user/upd-user/upd-user.component.html
@@ -7,7 +7,7 @@
   <div class="form-group">
     <label for="">注册时间</label>
     <input type="text" class="form-control" placeholder="注册时间" [minDate]="registerMinDate"
-           [maxDate]="registerMaxDate" bsDaterangepicker [(ngModel)]="registerDaterangepickerModel"
+           [maxDate]="registerMaxDate" [bsConfig]="bsConfig" bsDaterangepicker [(ngModel)]="registerDaterangepickerModel"
            name="registerDaterangepickerModel"/>
   </div>
   <div class="form-group">
