--- a/src/app/manager/user/upd-user/upd-user.component.html
+++ b/src/app/manager/user/upd-user/upd-user.component.html
@@ -82,6 +82,41 @@
               </div>
             </div>
           </div>
+          <div class="form-group">
+            <div class="col-md-5">
+              性别：
+              <label class="radio-inline">
+                <input type="radio" value="1" name="result" [(ngModel)]="cpaUserDto.sex"> 男
+              </label>
+              <label class="radio-inline">
+                <input type="radio" value="0" name="result" [(ngModel)]="cpaUserDto.sex"> 女
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-5">
+              <label for="">角色</label>
+              <select class="form-control" [(ngModel)]="cpaUserDto.roles" name="roles">
+                <option value="basicAccount">普通用户</option>
+                <option value="cpuAccount">管理员</option>
+                <option value="statuteEthics">超级管理员</option>
+              </select>
+            </div>
+          </div>
+
+          <label>状态：</label>
+          <div class="form-group">
+
+            <div class="col-md-5">
+
+              <label class="radio-inline">
+                <input type="radio" value="1" name="status" [(ngModel)]="cpaUserDto.status"> 正常
+              </label>
+              <label class="radio-inline">
+                <input type="radio" value="0" name="status" [(ngModel)]="cpaUserDto.status"> 锁定
+              </label>
+            </div>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
