--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
 代码比上面的代码少了组件间的通信方法 -->
 <app-loginmodel #loginModal></app-loginmodel>
 
-<app-share #shareModel></app-share>
+<app-share #shareModal></app-share>
 
 <!--页脚开始-->
 <div class="footer ">
