--- a/src/app/common/share/share.component.html
+++ b/src/app/common/share/share.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="isModalShown" [config]="{ show: true,keyboard: false,ignoreBackdropClick: true }" (onHidden)="onHidden()"
      bsModal #shareModal="bs-modal"
+     (onShown)="getPic()"
      class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
@@ -10,7 +11,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <img #shareUrl class="img-responsive img-rounded" src=""/>
+        <img #shareUrl class="img-responsive img-rounded" src="" alt=""/>
       </div>
     </div>
   </div>
