--- a/src/app/manager/itemmanager/updExam/upd-exam.component.html
+++ b/src/app/manager/itemmanager/updExam/upd-exam.component.html
@@ -7,7 +7,7 @@
   <div class="form-group">
     <label for="testType">试题类型</label>
     <select class="form-control" [(ngModel)]="cpaRepertory.testType" name="testType" id="testType">
-      <option value="null">------</option>
+      <option></option>
       <option value="basicAccount">会计基础</option>
       <option value="cpuAccount">会计电算化</option>
       <option value="statuteEthics">财经法规与职业道德</option>
