--- a/src/app/unitexam/unitexam.component.html
+++ b/src/app/unitexam/unitexam.component.html
@@ -22,7 +22,7 @@
 </div>
 <!-- 登陆窗口弹出层 -->
 <!-- 此变量须与组件内@ViewChild的值相同 -->
-<app-loginmodel #loginModal></app-loginmodel>
+<app-loginmodal #loginModal></app-loginmodal>
 
 <!-- 进度条组件 -->
 <app-progress #progress *ngIf="progressStatus" ></app-progress>
