--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,6 +114,8 @@
 
 <app-share #shareModal></app-share>
 
+<app-searchmodal #searchModal></app-searchmodal>
+
 <!--页脚开始-->
 <div class="footer ">
   <div class="container">
