--- a/src/app/common/loginmodal/loginmodal.component.html
+++ b/src/app/common/loginmodal/loginmodal.component.html
@@ -144,7 +144,7 @@
       <div class="modal-footer" [ngSwitch]="schema">
         <div class="row">
           <div class="col-md-6">
-        其他账号登陆：<img src="/qq_login.png" alt="">
+        其他账号登陆：<img src="/assets/qq_login.png" alt="">
       </div>
       <div class="col-md-6">
         <button *ngSwitchCase=1 type="submit" [disabled]="!loginForm.form.valid" class="btn btn-primary" (click)="login()">登陆</button>
